BCD & DI AVT - Can't operate actions by keystrokes org-ids/web-ide-issues#804 (#334)
* BCD & DI AVT - Can't operate actions by keystrokes org-ids/web-ide-issues#804

For
- 'Git - home'
- 'Git - item level commands of a commit'

* fix file main panel in editor page

* fix status list arrowing

* fix tree check box with keyboard

* review: arrow to no changes item

* review: keep focus item in status list tree after changing checked items

* review: make more commits button not traversable unless its item is selected

* fix launch configuration dialog

* fix layout problem in git commit message

* fix command "Show Tooltip" strings - command not showing in Key panel

* attempt to fix focus trapped problem

* tooltip does not take focus in F2 command if it was shown by hovering

--- a/bundles/org.eclipse.orion.client.git/web/git/css/git.css
+++ b/bundles/org.eclipse.orion.client.git/web/git/css/git.css
@@ -535,6 +535,7 @@ _:-moz-tree-row(hover), .gitChangeListCheck { /* Firefox  HACK */
 .gitCommitMessage .gitCommitMessageTopRow textarea {
 	width: calc(100% - 10px);
 	background-color: transparent;
+	resize: vertical;
 	border-width: 0px;
 }
 
